--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Elm App</title>
+    <title>Elm Example - GitHub stars</title>
 </head>
 <body>
     <noscript>
